<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/text_view_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8E9E3"
        android:gravity="right"
        android:paddingRight="5dp"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/btn_c"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_edit"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/btn_sign"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn_percent"
        app:layout_constraintStart_toEndOf="@+id/btn_c"
        app:layout_constraintTop_toBottomOf="@+id/text_view_edit"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/btn_percent"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintEnd_toStartOf="@+id/btn_division"
        app:layout_constraintStart_toEndOf="@+id/btn_sign"
        app:layout_constraintTop_toBottomOf="@+id/text_view_edit"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_c"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_3"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiplication"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn_percent"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_4"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_5"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_6"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_7"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_eng"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_8"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_9"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_point"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/btn_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:onClick="onOperationClick"
        android:text="@string/btn_eng"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/btn_0"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/btn_point"
        app:layout_constraintStart_toEndOf="@+id/btn_eng"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onNumberClick"
        android:text="@string/point"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/btn_smooth"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />


    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_division"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_multiplication"
        app:layout_constraintStart_toEndOf="@+id/btn_percent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_edit" />

    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_multiplication"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn_division" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_minus"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplication" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_plus"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_smooth"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />

    <Button
        android:id="@+id/btn_smooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_smooth"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/btn_point"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/rad"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eng" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/deg"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/btn0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/x"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/btn_point" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bracket_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button8" />


    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/lnv"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/sin"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/ln"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/btn_bracket_1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/btn_smooth"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/exp"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/cos"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="ButtonStyle,SpUsage" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="ButtonStyle,SpUsage" />


    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/tan"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/ans"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10" />


    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/x2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctng"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_e"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button11" />


</androidx.constraintlayout.widget.ConstraintLayout>
